# phala-faucet

./: .gitignore  Cargo.toml  Deploy.toml  README.md  lib.rs  package.json  rust-toolchain.toml
src/: after_tx.ts  check_balance.ts  index.ts  proven_pw_owner.ts  proven_social_profile.ts
